--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,21 @@ textarea {
 
 /* @media screen and (max-width: 1500px){ */
 
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 10px;
+}
 
+.first-unit {
+    margin-right: 8%;
+}
+
+.unit {
+    margin-bottom: 15px;
+}
 
 input{
     size: 10 !important;
@@ -136,6 +150,13 @@ table {
         margin-right: 10%;
     }
 }
+
+@media only screen and (max-width: 700px){
+    h1{
+        font-size: 25px;
+    }
+}
+
 @media only screen and (min-width: 868px){
     .inputs-section{
         margin-left: 20%;
