--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ table {
     margin: auto;
 }
 
+.cmb {
+    margin-bottom: 7px;
+}
+
 .pad-cell{
     padding-left: 12px;
 }
@@ -139,9 +143,8 @@ table {
   }
 
 .result{
-    text-align: center;
     margin-top: 10px;
-    font-size: 13pt;
+    margin-bottom: 15px;
 }
 
 @media only screen and (min-width: 700px){
